Move marks and terminal commands on moving and removing directories
Change key for terminal commands from full paths
to paths relative mount point.

--- a/TODO
+++ b/TODO
@@ -5,4 +5,9 @@
 5. > , | прямо в истории [CANCELLED]
 6. +, * [DONE]
 7. Ctrl-Mode для просмотрщика текстов [DONE]
-8. Виртуальная клавиатура
+8. Виртуальная клавиатура [DONE]
+9. Перемещение меток и истории команд при перемещении директорий [DONE]
+10. Удаление меток и истории команд при удалении директорий [DONE]
+11. Правка неправильно введённого текста на неверной раскладке
+12. Рендеринг папок в filemanager'е по новому.
+13. Русский перевод
