Editing keyboard layout of inputed text
You can select inputed text and press twice Shift or
layout changer to edit keyboard layout or case of inputed text.

--- a/TODO
+++ b/TODO
@@ -8,6 +8,6 @@
 8. Виртуальная клавиатура [DONE]
 9. Перемещение меток и истории команд при перемещении директорий [DONE]
 10. Удаление меток и истории команд при удалении директорий [DONE]
-11. Правка неправильно введённого текста на неверной раскладке
+11. Правка неправильно введённого текста на неверной раскладке [DONE]
 12. Рендеринг папок в filemanager'е по новому.
 13. Русский перевод
